--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,16 +28,19 @@ a {
   align-items: center;
   justify-content: space-around;
   height: 8vh;
-  background: white;
+  /* background: transparent; */
   position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
   /* padding: 4rem 5rem; */
-
   z-index: 100;
   width: 100%;
   margin-bottom: 10px;
+  /* box-shadow: 0px 2px 5px rgba(221, 221, 221, 0.5); */
+}
+.nav__scroll {
+  background-color: white;
   box-shadow: 0px 2px 5px rgba(221, 221, 221, 0.5);
 }
 .logo{
