--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -69,13 +69,32 @@
   margin-left: 2px;
 }
 
+
+         
+/* .btn-grad {
+  background-image: linear-gradient(to right, #FF8008 0%, #FFC837  51%, #FF8008  100%);
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+} */
+
+
 .button {
+  background: rgb(245,193,4);
+background: linear-gradient(87deg, rgba(245,193,4,1) 9%, rgba(255,206,28,1) 50%, rgba(255,205,27,1) 100%);
   padding: 0.7em 1.8em 0.8em;
   /* border: 0.5px solid rgb(212, 212, 212); */
   border-radius: 50px;
   /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
   margin: 5px 1px;
-  background-color: #f5c104;
+  /* background-color: #f5c104; */
   color:white;
   font-weight: 800;
   font-size: 0.9em;
@@ -84,11 +103,9 @@
 }
 
 .button:hover {
+  background: white;
   color: #24262b;
-  background-color: white;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  cursor: pointer;
-  border: none;
+  box-shadow: rgba(255, 187, 39, 0.35) 0px 5px 15px;
 }
 
 
