--- a/src/components/portfolios/portfolio.css
+++ b/src/components/portfolios/portfolio.css
@@ -64,7 +64,7 @@
   .filterItem ul button:hover {
     color: #24262b;
     background-color: white;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: rgba(255, 187, 39, 0.35) 0px 5px 15px;
     cursor: pointer;
     border: none;
   }
